syntax = "proto3";

package protobuf.kotlin.generator;

option java_package = "com.google.protobuf.kotlin.generator";

/*
 * We make sure the Kotlin version of this compiles, verifying b/140669339
 * is fixed.
 */
message EvilNames {
  bool initialized = 1;
  bool has_foo = 2;
  string Bar = 3;
  bool is_initialized = 4;

  oneof my_oneof {
    string
        aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa =
            110;
  }

  oneof camelCase {  // regression test for b/142341003
    string fooBar = 5;
  }

  repeated string ALL_CAPS = 7;
  map<int32, bool> ALL_CAPS_MAP = 8;

  // Cases where characters follow digit for b/143478601
  bool has_underbar_preceeding_numeric_1foo = 9;
  bool has_underbar_preceeding_numeric_42bar = 10;
  bool has_underbar_preceeding_numeric_123foo42bar_baz = 11;

  repeated string extension = 12;

  string class = 13;
  double int = 14;
  bool long = 15;
  int64 boolean = 16;
  string sealed = 17;
  float interface = 18;
  int32 in = 19;
  string object = 20;
  string cached_size = 21;
  bool serialized_size = 22;
  string value = 23;
  int64 index = 24;
  repeated string values = 25;
  repeated string new_values = 26;
  bool builder = 27;
  map<int32, int32> k = 28;
  map<string, string> v = 29;
  map<string, int32> key = 30;
  map<int32, string> map = 31;
  map<string, int32> pairs = 32;
}
